@@ -5,4 +5,4 @@
  *	Extensions for Inferno to basic libc.h
  */
 
-#undef __LITTLE_ENDIAN /* math/dtoa.c; longs in ARM doubles are big-endian */
+#define __LITTLE_ENDIAN /* math/dtoa.c; longs in ARM doubles are big-endian */
